--- a/index.html
+++ b/index.html
@@ -9,5 +9,11 @@
 <body>
   <h1>repositorio remoto</h1>
   <p>Estamos practicando git , colaboracion</p>
+
+  <script>
+    const fruits= ['banana' , 'apple', 'orange', 'mango', 'cherry'];
+    console.log(fruits.length);
+    
+  </script>
 </body>
 </html>
